src/test/deca/context/valid/homemade/tests/test23_decl_method.deca
// test valide de la règle 2.3


class A {
    int get() {}
    boolean exists() {}
}