src/test/deca/context/invalid/homemade/tests/test24_nom_deja_pris/test24_nom_deja_pris2.deca
// test invalide de la règle 2.4


class int{

}